specs/domain-invoice-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: domain-invoice-service
spec:
  type: ClusterIP
  selector:
    app: invoice-ms
  ports:
    - protocol: TCP
      port: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: domain-invoice-deployment
  namespace: default
  annotations:
    sidecar.istio.io/inject: "true"
  labels:
    app: invoice-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: invoice-ms
  template:
    metadata:
      labels:
        app: invoice-ms
    spec:
      serviceAccountName: demo-invoices
      containers:
        - name: invoice-ms
          image: ssuazaa08/domain-invoice-service
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
