specs/postgres.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: default
  labels:
    app: postgres-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-service
  template:
    metadata:
      labels:
        app: postgres-service
    spec:
      containers:
        - name: postgres
          image: postgres:14.2-alpine
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
              name: postgredb
          volumeMounts:
            - mountPath: /var/lib/postgresql
              name: postgredb
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: postgres-pv-claim

---

apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  type: NodePort
  selector:
    app: postgres-service
  ports:
    - protocol: TCP
      port: 5432
