specs/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: demo-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-virtual-service
spec:
  hosts:
    - "*"
  gateways:
    - demo-gateway
  http:
    - match:
      - uri:
          prefix: /api/users/
      route:
      - destination:
          host: domain-user-service.default.svc.cluster.local
          port:
            number: 8080
    - match:
      - uri:
          prefix: /api/invoices/
      route:
      - destination:
          host: domain-invoice-service.default.svc.cluster.local
          port:
           number: 8080
